--- a/python/py-geoip2/Portfile
+++ b/python/py-geoip2/Portfile
@@ -24,5 +24,8 @@ checksums           rmd160  57ec886dcab89c08fdb04c7838ecaf954ef54fc3 \
 python.versions     37 38 39 310
 
 if {${name} ne ${subport}} {
+    depends_lib-append \
+                    port:py${python.version}-maxminddb
+
     livecheck.type  none
 }
